# CitySonar

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
app/: cities.csv  streamlit_app.py  utils.py
notebooks/: articles_scraping.ipynb  clustering.ipynb  eda.ipynb  political_scraping.ipynb  publico_scraper.ipynb  scraping.ipynb
resources/: articles.py  stopwords.py
scripts/: arquivo_scraper.py  category_classifier.py  clustering.py  data_prep.py  embeddings.py  extract_arquivo_keywords.py  extract_categories.py  extract_keywords.py  extract_keywords_sentiment.py  extract_publico_keywords.py  extract_word_embeddings.py  keywords.py  publico_scraper.py  sentiment_classifier.py
src/: cleaners.py
