[tool.poetry]
name = "Smart Archive"
version = "0.0.1"
description = "Code implemented on the contest Prémio Arquivo.pt 2022"
authors = ["Joao Cunha"]

[tool.poetry.dependencies]
python = "3.9.*"

scikit-learn = "^1.0"
pandas = "^1.3.3"
matplotlib = "^3.4.3"
ipykernel = "^6.8.0"
openpyxl = "^3.0.9"
jupyterlab = "^3.2.4"
ipywidgets = "^7.6.5"
keybert = "^0.5.0"
seaborn = "^0.11.2"
joblib = "^1.1.0"
yake = "^0.4.8"
spacy = "^3.2.3"
spacytextblob = "^4.0.0"
typer = "0.3.2" # BUG on spacys
nlpiper = "^0.2.1"
nltk = "^3.7"


[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
mypy = "^0.902"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"