[tool.poetry]
name = "Smart Archive"
version = "0.0.1"
description = "Code implemented on the contest Prémio Arquivo.pt 2022"
authors = ["Joao Cunha"]

[tool.poetry.dependencies]
python = "3.9.*"

scikit-learn = "^1.0"
pandas = "^1.3.3"
matplotlib = "^3.4.3"
ipykernel = "^6.8.0"
openpyxl = "^3.0.9"
jupyterlab = "^3.2.4"
ipywidgets = "^7.6.5"
seaborn = "^0.11.2"
joblib = "^1.1.0"
yake = "^0.4.8"
spacy = "^3.2.3"
typer = "0.3.2" # BUG on spacy
nlpiper = "^0.2.1"
#pyLDAvis = "^3.3.1"
numpy = "^1.22.3"
scipy = "^1.8.0"
pybind11 = "^2.9.2"
Cython = "^0.29.28"
fasttext = "^0.9.2"
selenium = "^4.1.3"


[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
mypy = "^0.902"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"